[tool.poetry]
name = "chat-bot"
version = "0.1.0"
description = ""
authors = ["ihor.ye <ihor.ye@gowombat.team>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.22.1"
python-dotenv = "^0.21.0"
Flask-Admin = "^1.6.0"
Flask-SQLAlchemy = "^2.5.1"
aioredis = "^2.0.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

